# avante-management

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: app.drawio
src/base_static/global/css/: styles.css
src/base_templates/global/pages/: base.html  base_clean.html
src/base_templates/global/partials/: footer.html  head.html  header.html  sidebar.html
src/companies/: admin.py  apps.py  context_processors.py  feature_routes.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
src/companies/management/commands/: seed_base_data.py
src/companies/migrations/: 0001_initial.py  0002_company_cnpj.py  0002_feature_companyfeature.py  0003_alter_company_name.py  0003_alter_company_options.py  0004_backfill_default_feature_and_admin_permission.py  0004_employee.py  0005_alter_company_options.py  0006_alter_company_options.py
src/companies/templates/companies/pages/: company_configuration.html  company_features.html  employees.html  home.html  login.html  register_employee.html  signup_company.html
src/core/: settings.py  urls.py
src/users/: apps.py  forms.py  group_validation.py  groups.py  urls.py  views.py
src/warehouse/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
src/warehouse/migrations/: 0001_initial.py  0002_alter_item_type_alter_itemunit_state.py  0003_itemtype.py  0004_auto_20251230_1652.py  0005_item_type_new.py  0006_auto_20251230_1658.py  0007_remove_item_type_new_alter_item_type.py  0008_alter_item_options_alter_itemtype_options_and_more.py  0009_make_company_mandatory.py
(+8 files in other folders)
